# FL-PluginDB-Organiser

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  fl_plugin_db_organiser.py  pyproject.toml  setup.cfg  tox.ini
fl_plugin_db_organiser/: __init__.py  __main__.py
