[metadata]
name = fl_plugin_db_organiser
version = 1.0.14
author = demberto
author_email = demberto@protonmail.com
url = https://github.com/demberto/FL-PluginDB-Organiser
description = Reads plugin database files (.nfo) created by FL Studio and reorganises them into folders based on plugin vendor names
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities
project_urls =
    Bug Tracker = https://github.com/demberto/FL-PluginDB-Organiser/issues
    Changelog = https://github.com/demberto/FL-PluginDB-Organiser/blob/master/CHANGELOG.md

[options]
python_requires = >= 3.4
package_dir =
    = .
packages = find:
setup_requires =
    setuptools >= 51    # For entry_points
install_requires =
    ansicolors
    typing;python_version<'3.5'

[options.entry_points]
console_scripts =
    fl-plugindb-organiser = fl_plugin_db_organiser:main

[options.packages.find]
where = .